--- a/src/components/Qtable.scss
+++ b/src/components/Qtable.scss
@@ -5,7 +5,7 @@ table 			      {
   overflow:hidden;
   width:100%;
   position:relative;
-  
+  background-color: rgb(255, 255, 255);
 }
 
 th, td {
@@ -14,7 +14,6 @@ th, td {
   }
   
   tr:nth-child(even){background-color: #f2f2f2}
-  
   th {
     color:black;
   }
