--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Thai&display=swap');
 body {
-  background-color:white;
+  /* background-color:rgba(255, 255, 255, 0.119); */
   margin: 0;
   padding: 0;
 }
